# drpython-ecommerce

./: .dockerignore  .env.example  .env.gurudeb  .gitattributes  .gitignore  .gitmodules  ADD_FRONTEND.md  CLOUD_DEPLOYMENT_PLAN.md  README.md  README_DOCKER.md  SarkerShop_Deployment_Guide.md  convert_features_to_pdf.py  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.vps_dev.yml  docker-compose.yml  docker_run_guide.md  features.md  inspect_urls.py  linkedin_post.md  migration_v1.json  mobile-fix.txt  nginx_vps.conf  prod_db_dump.sql  seo_instructions.md  verify_resolve.py
backend/: .dockerignore  .env.example  BACKEND_PRD.md  Dockerfile  REDIS_CELERY_GUIDE.md  bioscope.py  celery_entrypoint.sh  entrypoint.sh  import_products.py  load_locations.py  manage.py  products.json  profile_fix_tasks.md  pyproject.toml  schema.yaml  test_email_smtp.py  youtube_cookies.txt
backend/accounts/: adapters.py  admin.py  backends.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/api/: analytics.py  export_views.py  import_views.py  permissions.py  urls.py  views.py
backend/chat/: admin.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/data/: upazilas_of_bangladesh-1568j.csv
backend/dev_feedback/: __init__.py  admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/docs/: API_DOCUMENTATION.md
backend/ecommerce_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/live_tv/: admin.py  models.py  serializers.py  urls.py  utils.py  (+1 more)
(+412 files in other folders)
