[project]
name = "sarker-shop-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "cryptography>=46.0.4",
    "dj-rest-auth>=7.0.2",
    "django>=5.2.8",
    "django-allauth>=65.14.0",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-smart-selects>=1.7.2",
    "django-unfold>=0.69.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "pillow>=12.0.0",
    "playwright>=1.57.0",
    "pyngrok>=7.5.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "uvicorn>=0.38.0",
    "whitenoise>=6.11.0",
    "celery[redis]>=5.3",
    "django-celery-results>=2.5",
    "psycopg2-binary>=2.9.9",
    "dj-database-url>=2.3.0",
    "channels>=4.0.0",
    "channels-redis>=4.1.0",
    "daphne>=4.1.0",
    "openpyxl>=3.1.5",
]
